--- a/calculaDores.css
+++ b/calculaDores.css
@@ -190,3 +190,29 @@ button:hover{
         grid-column:span 6
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .form-area{
+        border-radius:6px;
+        margin:3px auto;
+        padding:5px 5px;
+    }
+    .container{
+        margin:5px;
+        max-width:450px;
+        width:100%
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .form-area{
+        border-radius:12px;
+        margin:12px auto;
+        padding:1px 1px;
+    }
+    .container{
+        margin:13px auto;
+        max-width:450px;
+        width:100%
+    }
+}
