--- a/calculaDores.css
+++ b/calculaDores.css
@@ -13,7 +13,7 @@ body{
     width:85%
 }
 .page-header{
-    margin:15px 0
+    margin: 0px 10px;
 }
 .page-header h1{
     text-align:center
@@ -193,25 +193,12 @@ button:hover{
 
 @media only screen and (max-width: 768px) {
     .form-area{
-        border-radius:6px;
-        margin:3px auto;
-        padding:5px 5px;
-    }
-    .container{
-        margin:5px;
-        max-width:450px;
+        margin:10px auto;
+        padding:15px 15px;
         width:100%
     }
-}
-
-@media only screen and (max-width: 1000px) {
-    .form-area{
-        border-radius:12px;
-        margin:12px auto;
-        padding:1px 1px;
-    }
     .container{
-        margin:13px auto;
+        margin:10px auto;
         max-width:450px;
         width:100%
     }
