--- a/calculaDores.css
+++ b/calculaDores.css
@@ -13,10 +13,9 @@ body{
     width:85%
 }
 .page-header{
-    margin: 0px 10px;
-}
-.page-header h1{
-    text-align:center
+    margin: 15px 15px;
+    text-align:center;
+    font-size: 25px
 }
 .result-container{
     display:grid;
@@ -175,10 +174,10 @@ button:hover{
     border-color:#360d0d
 }
 @media screen and (max-width:768px){
+
     .result-container .info-item{
         margin:0
     }
-
     form{
         grid-template-areas:"salary salary salary salary salary salary" "children children children children children children" "rent rent rent rent rent rent" "mortgage mortgage mortgage mortgage mortgage mortgage" "marital marital marital marital marital marital" "retired retired retired retired retired retired" "patagonico patagonico patagonico patagonico patagonico patagonico" "button button button button button button"
     }
@@ -189,9 +188,6 @@ button:hover{
         grid-row:1/auto;
         grid-column:span 6
     }
-}
-
-@media only screen and (max-width: 768px) {
     .form-area{
         margin:10px auto;
         padding:15px 15px;
@@ -201,5 +197,10 @@ button:hover{
         margin:10px auto;
         max-width:450px;
         width:100%
+    }
+    .page-header{
+        margin: 15px 15px;
+        text-align:center;
+        font-size: 20px
     }
 }
