--- a/calculaDores.css
+++ b/calculaDores.css
@@ -98,11 +98,7 @@ form>div{
 .patagonico{
     grid-area:patagonico
 }
-.button , .buttonB{
-    grid-area:button;
-    text-align:center;
-    display:inline-block;
-}
+
 .radio-label{
     font-weight:400
 }
@@ -121,6 +117,51 @@ label{
     margin-bottom:8px;
     margin-top:18px
 }
+
+input:focus,select:focus,textarea:focus{
+    box-shadow:0 0 1px 1px #0d1e36;
+    outline:0
+}
+input[type=radio]{
+    display:inline;
+    width:auto
+}
+
+.cotiOfi{
+    display:inline-block;
+    font-family:Montserrat,sans-serif;
+    font-size:15px;
+    padding:10px;
+    width:10%;
+    -webkit-border-radius:6px;
+    -moz-border-radius:4px;
+    -ms-border-radius:4px;
+    -o-border-radius:4px;
+    border-radius:10px;
+    border:1px solid #bbb;
+    letter-spacing:1px;
+    box-sizing:border-box;
+    grid-area:button;
+    text-align:center;
+    margin-top:30px;
+    background:#0d1e36;
+    color:#fff;
+    transition:.3s;
+}
+.cotiOfi:hover{
+    background:#1a3c6d
+}
+
+.distintasCoti{
+    width:200%;
+}
+
+.button , .buttonB{
+    grid-area:button;
+    text-align:center;
+    display:inline-block;
+}
+
 button,input,select,textarea{
     display:block;
     font-family:Montserrat,sans-serif;
@@ -135,29 +176,7 @@ button,input,select,textarea{
     letter-spacing:1px;
     box-sizing:border-box
 }
-input:focus,select:focus,textarea:focus{
-    box-shadow:0 0 1px 1px #0d1e36;
-    outline:0
-}
-input[type=radio]{
-    display:inline;
-    width:auto
-}
-button{
-    margin-top:20px;
-    background:#0d1e36;
-    color:#fff;
-    font-size:18px;
-    font-weight:700;
-    border:none;
-    transition:.3s;
-    display:inline;
-    text-align: center;
-}
-button:hover{
-    cursor:pointer;
-    background:#1a3c6d
-}
+
 .btn-secondary{
     color:#fff;
     background-color:#d9d9d9;
@@ -205,4 +224,5 @@ button:hover{
         text-align:center;
         font-size: 20px
     }
+
 }
